# captcha_finetune

./: .gitignore  CLAUDE.md  GUIDELINE.md  README.md  export_onnx.py  inference.py  main.py  pyproject.toml  split_dataset.py  train.py  train_v2.py
